# vim: set noexpandtab:

2013-09-25 Davide
	* Add special signal lepton definition for 2LepWH

2013-08-19 Davide
	* Add secondary vtx mass to Jet

2013-08-16 Davide
	* Add emfrac to Jet
	* Add mc truth particles for ttbar (implemented in WhTruthExtractor::ttbarMcAtNloParticles)

2013-07-30 Steve
	* Added jetPtCut arg to Meff methods

2013-07-27 Anyes
	* Update hasZllZll method to return lep idx making Z's

2013-07-12 Steve
	* Added hasZllZll method to SusyNtTools

2013-7-22 Serhan Mete <amete@cern.ch>
	* */SusyNtTools.[cxx,h]: SusyNtTools::buildSumwMap now handles Simplified Model

2013-07-22 Anyes
	* Added mEff w/o leptons
	* Few tweaks to TGuiUtils

2013-07-12 Steve
	* Added hasZlll and hasZllll methods to SusyNtTools

2013-07-07 Steve
	* Added shifted pileup weights for pileup systematic
	* Tagging SusyNtuple-00-01-04

2013-07-06 Matt
	* Added met weights for the jets x,y components.

2013-07-05 Matt
	* Changed how bTagSF is called, see header.
	* Added configure method for bTagSF tool
	* Updated initialization of DilTrigTool to be compatibile with latest DGTrigger package

2013-07-02 Matt
	* Adding sumet to all met terms except refCell and softJet since these are no longer used.
	* Fixed missing copy constructor for softTerm in SusyNt.cxx

2013-06-26 Steve
	* Addd isSemiSignalElectron and isSemiSignalMuon from Tina
	* Updated 3L isolation corrections to only subtract semi-signal leptons
	* Tagging SusyNtuple-00-01-03

2013-06-26 Steve
	* Added event trigger cut to TrilTrigLogic
	* Added getHT and getThrT methods to SusyNtTools
	* Made isSelectTau and performOverlap virtual for overriding in matrix method
	* Tagging SusyNtuple-00-01-02

2013-06-24 Steve
	* Turned on m_selectTaus by default

2013-06-22 Matt
	* Changed passDeadRegions Pt threshold 30-->40 following 2Lep update.

2013-06-21 Steve
	* Fixed position of tau overlap removal
		* Slight mistake introduced on 2013-06-10 commit below

2013-06-20 Davide