@@ -1,5 +1,8 @@
 # vim: set noexpandtab:
 
+2013-10-04 Davide
+	* Add etcone20 to Lepton
+
 2013-09-25 Davide
 	* Add special signal lepton definition for 2LepWH
 
